deixando so imagens que vou usar e padronizando seus nomes e diretorios

--- a/carrinho.html
+++ b/carrinho.html
@@ -51,7 +51,7 @@
                         <div class="product-item border rounded-2 p-3 mb-3 bg-white">
                             <div class="row align-items-center">
                                 <div class="col-md-2">
-                                    <img src="./imagens/produtos/NikeAirMax270/Preto/Tênis Nike Air Max 270 Masculino - Preto.jpg"
+                                    <img src="./imagens/produtos/NikeAirMax270/Preto/1.jpg"
                                         class="img-fluid" alt="Nike Air Max">
                                 </div>
                                 <div class="col-md-5">
@@ -78,7 +78,7 @@
                         <div class="product-item border rounded-2 p-3 mb-3 bg-white">
                             <div class="row align-items-center">
                                 <div class="col-md-2">
-                                    <img src="./imagens/produtos/AdidasUltraboost22/Azul/Adidas Ultraboost 22 - Azul-1.jpg"
+                                    <img src="./imagens/produtos/AdidasUltraboost/Azul/1.jpg"
                                         class="img-fluid" alt="Adidas Ultraboost">
                                 </div>
                                 <div class="col-md-5">
@@ -105,7 +105,7 @@
                         <div class="product-item border rounded-2 p-3 mb-3 bg-white">
                             <div class="row align-items-center">
                                 <div class="col-md-2">
-                                    <img src="./imagens/produtos/PumaRS-X/Cinza/Puma RS-X - Cinza-2.jpg"
+                                    <img src="./imagens/produtos/PumaRS-X/Cinza/1.jpg"
                                         class="img-fluid" alt="Puma RS-X">
                                 </div>
                                 <div class="col-md-5">
