--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
                         <span class="badge-porcentagem">19% OFF</span>
                         <span class="badge-categoria">Basketball</span>
                         <img
-                            src="./imagens/produtos/AirJordan1RetroHigh/Vermelho/Air Jordan 1 Retro High - Vermelho-3.jpg">
+                            src="./imagens/produtos/AirJordan1RetroHigh/Vermelho/1.jpg">
                     </div>
                     <div class="body">
                         <h3>Jordan 1 Retro High</h3>
@@ -115,7 +115,7 @@
                     <div class="header">
                         <span class="badge-porcentagem">20% OFF</span>
                         <span class="badge-categoria">Casual</span>
-                        <img src="./imagens/produtos/NewBalance990v5/Bege - Azul - Roxo/Bege-Roxo/Roxo-1.jpg">
+                        <img src="./imagens/produtos/NewBalance990v5/Bege-Roxo/1.jpg">
                     </div>
                     <div class="body">
                         <h3>New Balance 990v5</h3>
@@ -131,7 +131,7 @@
                     <div class="header">
                         <span class="badge-porcentagem">25% OFF</span>
                         <span class="badge-categoria">Skate</span>
-                        <img src="./imagens/produtos/VansOldSkool/Vans Old Skoo-2.jpg">
+                        <img src="./imagens/produtos/VansOldSkool/1.jpg">
                     </div>
                     <div class="body">
                         <h3>Vans Old Skool</h3>
