--- a/produtos-detalhamento/adidas-ultraboost.html
+++ b/produtos-detalhamento/adidas-ultraboost.html
@@ -39,11 +39,10 @@
         <section>
             <div class="container">
                 <div class="imagens">
-                    <img src="./../imagens/produtos/AdidasUltraboost22/Azul/Adidas Ultraboost 22 - Azul-1.jpg"
-                        class="principal" />
+                    <img src="./../imagens/produtos/AdidasUltraboost/Azul/1.jpg" class="principal" />
                     <div class="complementares">
-                        <img src="./../imagens/produtos/AdidasUltraboost22/Azul/Adidas Ultraboost 22 - Azul.jpg" />
-                        <img src="./../imagens/produtos/AdidasUltraboost22/Azul/Adidas Ultraboost 22 - Azul-3.jpg" />
+                        <img src="./../imagens/produtos/AdidasUltraboost/Azul/2.jpg" />
+                        <img src="./../imagens/produtos/AdidasUltraboost/Azul/3.jpg" />
                     </div>
 
                 </div>
