--- a/produtos-detalhamento/jordan1-retro-high.html
+++ b/produtos-detalhamento/jordan1-retro-high.html
@@ -39,13 +39,10 @@
         <section>
             <div class="container">
                 <div class="imagens">
-                    <img src="./../imagens/produtos/AirJordan1RetroHigh/Vermelho/Air Jordan 1 Retro High - Vermelho-3.jpg"
-                        class="principal" />
+                    <img src="./../imagens/produtos/AirJordan1RetroHigh/Vermelho/1.jpg" class="principal" />
                     <div class="complementares">
-                        <img
-                            src="./../imagens/produtos/AirJordan1RetroHigh/Vermelho/Air Jordan 1 Retro High - Vermelho.jpg" />
-                        <img
-                            src="./../imagens/produtos/AirJordan1RetroHigh/Vermelho/Air Jordan 1 Retro High - Vermelho-2.jpg" />
+                        <img src="./../imagens/produtos/AirJordan1RetroHigh/Vermelho/2.jpg" />
+                        <img src="./../imagens/produtos/AirJordan1RetroHigh/Vermelho/3..jpg" />
                     </div>
 
                 </div>
