--- a/produtos-detalhamento/new-balance.html
+++ b/produtos-detalhamento/new-balance.html
@@ -39,11 +39,11 @@
         <section>
             <div class="container">
                 <div class="imagens">
-                    <img src="./../imagens/produtos/NewBalance990v5/Bege - Azul - Roxo/Bege-Roxo/Roxo-1.jpg"
+                    <img src="./../imagens/produtos/NewBalance990v5/Bege-Roxo/1.jpg"
                         class="principal" />
                     <div class="complementares">
-                        <img src="./../imagens/produtos/NewBalance990v5/Bege - Azul - Roxo/Bege-Roxo/Roxo-2.jpg" />
-                        <img src="./../imagens/produtos/NewBalance990v5/Bege - Azul - Roxo/Bege-Roxo/Roxo.jpg" />
+                        <img src="./../imagens/produtos/NewBalance990v5/Bege-Roxo/2.jpg" />
+                        <img src="./../imagens/produtos/NewBalance990v5/Bege-Roxo/3.jpg" />
                     </div>
 
                 </div>
