--- a/produtos-detalhamento/nike-air-270.html
+++ b/produtos-detalhamento/nike-air-270.html
@@ -39,15 +39,11 @@
         <section>
             <div class="container">
                 <div class="imagens">
-                    <img src="./../imagens/produtos/NikeAirMax270/Preto/Tênis Nike Air Max 270 Masculino - Preto.jpg"
-                        class="principal" />
+                    <img src="./../imagens/produtos/NikeAirMax270/Preto/1.jpg" class="principal" />
                     <div class="complementares">
-                        <img
-                            src="./../imagens/produtos/NikeAirMax270/Preto/Tênis Nike Air Max 270 Masculino - Preto-1.jpg" />
-                        <img
-                            src="./../imagens/produtos/NikeAirMax270/Preto/Tênis Nike Air Max 270 Masculino - Preto-2.jpg" />
+                        <img src="./../imagens/produtos/NikeAirMax270/Preto/2.jpg" />
+                        <img src="./../imagens/produtos/NikeAirMax270/Preto/3.jpg" />
                     </div>
-
                 </div>
                 <div class="especificacoes">
                     <div class="destaque">
