--- a/produtos-detalhamento/puma-rs-x.html
+++ b/produtos-detalhamento/puma-rs-x.html
@@ -39,10 +39,10 @@
         <section>
             <div class="container">
                 <div class="imagens">
-                    <img src="./../imagens/produtos/PumaRS-X/Cinza/Puma RS-X - Cinza-2.jpg" class="principal" />
+                    <img src="./../imagens/produtos/PumaRS-X/Cinza/1.jpg" class="principal" />
                     <div class="complementares">
-                        <img src="./../imagens/produtos/PumaRS-X/Cinza/Puma RS-X - Cinza-3.jpg" />
-                        <img src="./../imagens/produtos/PumaRS-X/Cinza/Puma RS-X - Cinza.jpg" />
+                        <img src="./../imagens/produtos/PumaRS-X/Cinza/2.jpg" />
+                        <img src="./../imagens/produtos/PumaRS-X/Cinza/3.jpg" />
                     </div>
 
                 </div>
