--- a/produtos-detalhamento/vans-old-skool.html
+++ b/produtos-detalhamento/vans-old-skool.html
@@ -39,16 +39,16 @@
         <section>
             <div class="container">
                 <div class="imagens">
-                    <img src="./../imagens/produtos/VansOldSkool/Vans Old Skoo-2.jpg" class="principal" />
+                    <img src="./../imagens/produtos/VansOldSkool/1.jpg" class="principal" />
                     <div class="complementares">
-                        <img src="./../imagens/produtos/VansOldSkool/Vans Old Skoo-1.jpg" />
-                        <img src="./../imagens/produtos/VansOldSkool/Vans Old Skoo.jpg" />
+                        <img src="./../imagens/produtos/VansOldSkool/2.jpg" />
+                        <img src="./../imagens/produtos/VansOldSkool/3.jpg" />
                     </div>
 
                 </div>
                 <div class="especificacoes">
                     <div class="destaque">
-                        <h1>Nike Air Max 270</h1>
+                        <h1>Vans Old Skool</h1>
                     </div>
                     <div class="precificacao">
                         <p class="por">R$ 299,99</p>
