--- a/produtos.html
+++ b/produtos.html
@@ -50,7 +50,7 @@
                     <div class="header">
                         <span class="badge-porcentagem">25% OFF</span>
                         <span class="badge-categoria">Casual</span>
-                        <img src="./imagens/produtos/NikeAirMax270/Preto/Tênis Nike Air Max 270 Masculino - Preto.jpg">
+                        <img src="./imagens/produtos/NikeAirMax270/Preto/1.jpg">
                     </div>
                     <div class="body">
                         <h3>Nike Air Max 270</h3>
@@ -67,7 +67,7 @@
                     <div class="header">
                         <span class="badge-porcentagem">25% OFF</span>
                         <span class="badge-categoria">Running</span>
-                        <img src="./imagens/produtos/AdidasUltraboost22/Azul/Adidas Ultraboost 22 - Azul-1.jpg">
+                        <img src="./imagens/produtos/AdidasUltraboost/Azul/1.jpg">
                     </div>
                     <div class="body">
                         <h3>Adidas Ultraboost 22</h3>
@@ -85,7 +85,7 @@
                         <span class="badge-porcentagem">19% OFF</span>
                         <span class="badge-categoria">Basketball</span>
                         <img
-                            src="./imagens/produtos/AirJordan1RetroHigh/Vermelho/Air Jordan 1 Retro High - Vermelho-3.jpg">
+                            src="./imagens/produtos/AirJordan1RetroHigh/Vermelho/1.jpg">
                     </div>
                     <div class="body">
                         <h3>Jordan 1 Retro High</h3>
@@ -102,11 +102,11 @@
                     <div class="header">
                         <span class="badge-porcentagem">25% OFF</span>
                         <span class="badge-categoria">Lifestyle</span>
-                        <img src="./imagens/produtos/PumaRS-X/Cinza/Puma RS-X - Cinza-2.jpg">
+                        <img src="./imagens/produtos/PumaRS-X/Cinza/1.jpg">
                     </div>
                     <div class="body">
                         <h3>Puma RS-X</h3>
-                        <p>Tênis casual com tecnologia Air Max para máximo conforto</p>
+                        <p>Tênis lifestyle com design futurista e cores vibrantes</p>
                         <div class="precificacao">
                             <p class="por">R$ 499,99</p>
                             <p class="de">R$ 599,99</p>
@@ -119,7 +119,7 @@
                     <div class="header">
                         <span class="badge-porcentagem">20% OFF</span>
                         <span class="badge-categoria">Casual</span>
-                        <img src="./imagens/produtos/NewBalance990v5/Bege - Azul - Roxo/Bege-Roxo/Roxo-1.jpg">
+                        <img src="./imagens/produtos/NewBalance990v5/Bege-Roxo/1.jpg">
                     </div>
                     <div class="body">
                         <h3>New Balance 990v5</h3>
@@ -136,7 +136,7 @@
                     <div class="header">
                         <span class="badge-porcentagem">25% OFF</span>
                         <span class="badge-categoria">Skate</span>
-                        <img src="./imagens/produtos/VansOldSkool/Vans Old Skoo-2.jpg">
+                        <img src="./imagens/produtos/VansOldSkool/1.jpg">
                     </div>
                     <div class="body">
                         <h3>Vans Old Skool</h3>
