corrigindo link do footer e adicionando o link de inicio no header

--- a/produtos-detalhamento/nike-air-270.html
+++ b/produtos-detalhamento/nike-air-270.html
@@ -183,12 +183,12 @@
                 </div>
                 <div>
                     <h5>Links Rápidos</h5>
-                    <div class="links">
-                        <a href="">Início</a>
-                        <a href="./produtos.html">Produtos</a>
-                        <a href="./noticias.html">Notícias</a>
-                        <a href="./cadastro.html">Cadastro</a>
-                        <a href="./contato.html">Contato</a>
+                     <div class="links">
+                        <a href="./../home.html">Início</a>
+                        <a href="./../produtos.html">Produtos</a>
+                        <a href="./../noticias.html">Notícias</a>
+                        <a href="./../cadastro.html">Cadastro</a>
+                        <a href="./../contato.html">Contato</a>
                     </div>
                 </div>
                 <div>
