--- a/cadastro.html
+++ b/cadastro.html
@@ -152,7 +152,7 @@
                 <div>
                     <h5>Links Rápidos</h5>
                     <div class="links">
-                        <a href="">Início</a>
+                        <a href="./home.html">Início</a>
                         <a href="./produtos.html">Produtos</a>
                         <a href="./noticias.html">Notícias</a>
                         <a href="./cadastro.html">Cadastro</a>
