--- a/noticias.html
+++ b/noticias.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/noticias.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/noticias.css">
     <style>
     </style>
 </head>
@@ -43,13 +43,13 @@
 
     <main>
         <section class="py-5 bg-white" id="noticias">
+            <div class="destaque">
+                <h1>Últimas Notícias</h1>
+                <p>Fique por dentro das últimas novidades do mundo dos tênis. <br>
+                    Lançamentos, tendências e tudo que acontece no
+                    universo sneaker.</p>
+            </div>
             <div class="container">
-                <div class="text-center mb-5">
-                    <h1 class="display-5 fw-bold text-dark mb-3">Últimas Notícias</h1>
-                    <p class="lead text-muted">Fique por dentro das últimas novidades do mundo dos tênis</p>
-                    <p class="text-muted">Lançamentos, tendências e tudo que acontece no universo sneaker.</p>
-                </div>
-
                 <div id="newsCarousel" class="carousel slide position-relative" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
