acao de limpar feita nos formularios

--- a/cadastro.html
+++ b/cadastro.html
@@ -98,7 +98,10 @@
                             <label>Observacões</label>
                             <textarea rows="5" cols="33" placeholder="Informações adicionais (opcional)"></textarea>
                         </div>
-                        <button class="btn" type="submit">Cadastrar</button>
+                        <div class="acoes"> 
+                            <button class="btn" type="submit">Cadastrar</button>
+                            <button class="btn limpar" type="reset">Limpar</button>
+                        </div>
                     </form>
                 </div>
 
