--- a/contato.html
+++ b/contato.html
@@ -24,7 +24,7 @@
             <a href="./cadastro.html">Cadastro</a>
             <a href="./contato.html">Contato</a>
             <a href="./sobreProjeto.html">Sobre o Projeto</a>
-               <a href="./carrinho.html">
+            <a href="./carrinho.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="lucide lucide-shopping-cart-icon lucide-shopping-cart">
@@ -59,7 +59,10 @@
                         <textarea rows="5" cols="33"
                             placeholder="Descreva sua dúvida, solicitação ou sugestão..."></textarea>
                     </div>
-                    <button class="btn" type="submit">Enviar Mensagem</button>
+                    <div class="acoes">
+                        <button class="btn" type="submit">Enviar mensagem</button>
+                        <button class="btn limpar" type="reset">Limpar</button>
+                    </div>
                 </form>
 
                 <div class="about">
