imagem do index ser um link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section class="apresentacao">
             <div class="container">
-                <img class="logo" src="./imagens/logo-branca.svg">
+                <a href="./home.html"><img class="logo" src="./imagens/logo-branca.svg"></a>
                 <h1>E-commerce moderno especializado em tênis e calçados esportivos. Desenvolvido com HTML e CSS.</h1>
                 <a class="btn" href="./home.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
