uso do bootstrap

--- a/sobreProjeto.html
+++ b/sobreProjeto.html
@@ -204,6 +204,9 @@
                             <strong>Personalização Profunda do Bootstrap:</strong> Pode ser trabalhosa sem
                             pré-processadores CSS.
                         </li>
+                        <li>
+                            <strong>Necessidade de estar conectado:</strong> Uso do bootstrap via CDN criou a necessidade de estar conectado a internet pra ver a estilização de algumas páginas do site (notícias e carrinho)
+                        </li>
                     </ul>
                 </div>
 
@@ -218,6 +221,11 @@
                         </svg>
                         Aplicação do Bootstrap no Projeto
                     </h2>
+                    <ul> 
+                        <li>Grid e Layout Responsivo</li>
+                        <li>Componentes prontos (Carrosel de Imagens, Formulários, botoẽs, Cards)</li>
+                        <li>Ícones e Utilitários (Espaçamento, Cores, Badges)</li>
+                    </ul>
                 </div>
                 <div class="card">
                     <h2>
@@ -234,11 +242,11 @@
                     <p>
                         Como um projeto acadêmico, a periodicidade de atualização é pontual, focada na entrega dos
                         requisitos. Em
-                        um cenário de e-commerce real, um site como este exigiria atualizações contínuas para adicionar
+                        um cenário de e-commerce real, um site como esse exigiria atualizações contínuas para adicionar
                         novos
                         produtos, notícias, promoções, implementar novas funcionalidades, e realizar manutenção de
                         segurança e
-                        performance para garantir a melhor experiência ao usuário e a competitividade no mercado.
+                        performance para garantir a melhor experiência ao usuário.
                     </p>
                 </div>
             </div>
