--- a/noticias.html
+++ b/noticias.html
@@ -22,6 +22,7 @@
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav>
+            <a href="./index.html">Apresentação</a>
             <a href="./home.html">Início</a>
             <a href="./produtos.html">Produtos</a>
             <a href="./noticias.html">Notícias</a>
@@ -40,7 +41,6 @@
             </a>
         </nav>
     </header>
-
     <main>
         <section class="py-5 bg-white" id="noticias">
             <div class="destaque">
