--- a/contato.html
+++ b/contato.html
@@ -18,12 +18,14 @@
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav>
+            <a href="./index.html">Apresentação</a>
             <a href="./home.html">Início</a>
             <a href="./produtos.html">Produtos</a>
             <a href="./noticias.html">Notícias</a>
             <a href="./cadastro.html">Cadastro</a>
             <a href="./contato.html">Contato</a>
             <a href="./sobreProjeto.html">Sobre o Projeto</a>
+
             <a href="./carrinho.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
