--- a/produtos-detalhamento/new-balance.html
+++ b/produtos-detalhamento/new-balance.html
@@ -18,6 +18,7 @@
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav>
+            <a href="./../index.html">Apresentação</a>
             <a href="./../home.html">Início</a>
             <a href="./../produtos.html">Produtos</a>
             <a href="./../noticias.html">Notícias</a>
@@ -39,8 +40,7 @@
         <section>
             <div class="container">
                 <div class="imagens">
-                    <img src="./../imagens/produtos/NewBalance990v5/Bege-Roxo/1.jpg"
-                        class="principal" />
+                    <img src="./../imagens/produtos/NewBalance990v5/Bege-Roxo/1.jpg" class="principal" />
                     <div class="complementares">
                         <img src="./../imagens/produtos/NewBalance990v5/Bege-Roxo/2.jpg" />
                         <img src="./../imagens/produtos/NewBalance990v5/Bege-Roxo/3.jpg" />
