--- a/produtos.html
+++ b/produtos.html
@@ -18,6 +18,7 @@
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav>
+            <a href="./index.html">Apresentação</a>
             <a href="./home.html">Início</a>
             <a href="./produtos.html">Produtos</a>
             <a href="./noticias.html">Notícias</a>
@@ -84,8 +85,7 @@
                     <div class="header">
                         <span class="badge-porcentagem">19% OFF</span>
                         <span class="badge-categoria">Basketball</span>
-                        <img
-                            src="./imagens/produtos/AirJordan1RetroHigh/Vermelho/1.jpg">
+                        <img src="./imagens/produtos/AirJordan1RetroHigh/Vermelho/1.jpg">
                     </div>
                     <div class="body">
                         <h3>Jordan 1 Retro High</h3>
