--- a/sobreProjeto.html
+++ b/sobreProjeto.html
@@ -13,11 +13,12 @@
 </head>
 
 <body>
-    <header>
+        <header>
         <img class="logo" src="./imagens/logo.svg" alt="logo">
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav>
+            <a href="./index.html">Apresentação</a>
             <a href="./home.html">Início</a>
             <a href="./produtos.html">Produtos</a>
             <a href="./noticias.html">Notícias</a>
