ajustes na pagina de noticia

--- a/noticias.html
+++ b/noticias.html
@@ -65,8 +65,15 @@
                                                 amortecimento e design futurista que promete redefinir o conceito de
                                                 conforto.</p>
                                             <a href="https://www.nike.com/pt/a/air-max-day" target="_blank">
-                                                <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"
-                                                    class="icone" />
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="lucide lucide-square-arrow-out-up-right-icon lucide-square-arrow-out-up-right">
+                                                    <path
+                                                        d="M21 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h6" />
+                                                    <path d="m21 3-9 9" />
+                                                    <path d="M15 3h6v6" />
+                                                </svg>
                                                 Fonte
                                             </a>
                                         </div>
@@ -92,8 +99,15 @@
                                             </p>
                                             <a href="https://www.adidas.com.br/go/campaign/impact/planet"
                                                 target="_blank">
-                                                <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"
-                                                    class="icone" />
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="lucide lucide-square-arrow-out-up-right-icon lucide-square-arrow-out-up-right">
+                                                    <path
+                                                        d="M21 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h6" />
+                                                    <path d="m21 3-9 9" />
+                                                    <path d="M15 3h6v6" />
+                                                </svg>
                                                 Fonte
                                             </a>
                                         </div>
@@ -115,8 +129,15 @@
                                                 comemorações de seus 60 anos</p>
                                             <a href="https://www.vans.com.br/vansnews/lifestyle/classicos-atravessando-geracoes-vans-celebra-60-anos-de-criatividade-e-estilo-atemporal"
                                                 target="_blank">
-                                                <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"
-                                                    class="icone" />
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="lucide lucide-square-arrow-out-up-right-icon lucide-square-arrow-out-up-right">
+                                                    <path
+                                                        d="M21 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h6" />
+                                                    <path d="m21 3-9 9" />
+                                                    <path d="M15 3h6v6" />
+                                                </svg>
                                                 Fonte
                                             </a>
                                         </div>
@@ -133,13 +154,20 @@
                                         <div class="card-body p-3">
                                             <h5 class="badge-categoria">Tendências</h5>
                                             <h3>Tendências de tênis para 2025</h3>
-                                            <p>Especialistas em moda revelam as principais tendências em calçados
-                                                esportivos para este ano,
-                                                destacando cores vibrantes e tecnologias inovadoras de performance.</p>
+                                            <p>Tênis dos anos 2000 estão em alta! Confira as 3 maiores tendências de
+                                                2025: o retorno dos modelos estilo chuteira, os tênis “gorduchos” e os
+                                                retro runners com vibe esportiva.</p>
                                             <a href="https://www.estadao.com.br/recomenda/moda-e-beleza/moda-roupas-calcados-e-acessorios/calcados/tendencias-de-tenis-para-2025/"
                                                 target="_blank">
-                                                <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"
-                                                    class="icone" />
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="lucide lucide-square-arrow-out-up-right-icon lucide-square-arrow-out-up-right">
+                                                    <path
+                                                        d="M21 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h6" />
+                                                    <path d="m21 3-9 9" />
+                                                    <path d="M15 3h6v6" />
+                                                </svg>
                                                 Fonte
                                             </a>
                                         </div>
@@ -162,8 +190,15 @@
                                                 desempenho adequado para o calçado PUMA.</p>
                                             <a href="https://about.puma.com/en/newsroom/news/pumar-introduces-self-lacing-training-shoe-fit-intelligence"
                                                 target="_blank">
-                                                <img src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/external-link.svg"
-                                                    class="icone" />
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="lucide lucide-square-arrow-out-up-right-icon lucide-square-arrow-out-up-right">
+                                                    <path
+                                                        d="M21 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h6" />
+                                                    <path d="m21 3-9 9" />
+                                                    <path d="M15 3h6v6" />
+                                                </svg>
                                                 Fonte
                                             </a>
                                         </div>
